--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Jekyll configuration
 
-name: Blog Name
+name: Victor Nițu
 description: Software Developer
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://streetturtle.github.io
+url: http://nightsh.github.io
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
-baseurl: '/jekyll-clean-dark'
+# baseurl: '/'
 
 share:
   facebook: true
@@ -19,9 +19,9 @@ share:
   email: true
 
 social:
-  github: streetturtle
-  stackoverflow: ''
-  linkedin:
+  github: nightsh
+  stackoverflow: '965912'
+  linkedin: 'vnitu'
   instagram: ''
   lastfm: ''
   rss: feed.xml
@@ -35,8 +35,8 @@ yandex_metrica:
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: streetturtle
-comments: false
+disqus: nightsh
+comments: true
 
 permalink: /:year/:month/:title
 
