--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ url: http://nightsh.github.io
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
 # baseurl: '/'
 
+plugins:
+  - jekyll-admin
+
 share:
   facebook: true
   twitter: true
