--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
-name: Victor Nițu
-description: Software Developer
+name: End Of Medium
+description: Victor Nițu
 
 # Url is currently only used only for the RSS feed in feed.xml
 url: http://nightsh.github.io
@@ -12,6 +12,11 @@ url: http://nightsh.github.io
 
 plugins:
   - jekyll-admin
+  - jekyll-asciinema
+  - jekyll-mentions
+  - jekyll-toc
+  - jekyll-gist
+  - jekyll-sitemap
 
 share:
   facebook: true
@@ -25,8 +30,8 @@ social:
   github: nightsh
   stackoverflow: '965912'
   linkedin: 'vnitu'
-  instagram: ''
-  lastfm: ''
+  # instagram: ''
+  # lastfm: ''
   rss: feed.xml
 
 # Google Analytics key, leave blank to ignore
@@ -41,10 +46,10 @@ yandex_metrica:
 disqus: nightsh
 comments: true
 
-permalink: /:year/:month/:title
+permalink: pretty
 
 # Enable for using pages, more details are here: http://jekyllrb.com/docs/pagination/
-#paginate: 3
+paginate: 3
 
 #highlighter: rouge
 
