--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ name: End Of Medium
 description: Victor Nițu
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://nightsh.github.io
+url: https://0x19.net
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
